--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,7 @@
-org.gradle.jvmargs=-Xmx768m -XX:MaxMetaspaceSize=256m -Dfile.encoding=UTF-8
+# gradle.properties
+org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.parallel=true
 org.gradle.daemon=true
-org.gradle.workers.max=2
-org.gradle.parallel=false
-
+org.gradle.caching=true
 android.useAndroidX=true
-android.nonTransitiveRClass=true
-
 kotlin.code.style=official
